services/iris-user-state/k8s/src/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-deployment
  labels:
    app: iris
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iris
  template:
    metadata:
      labels:
        app: iris
    spec:
      containers:
      - name: iris
        image: iris:0.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
