services/iris-user-state/k8s/src/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-service
spec:
  type: ClusterIP
  selector:
    app: iris
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
