services/iris-user-state/k8s/src/base/state-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-state
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: iris-state
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: iris-state
spec:
  selector:
    matchLabels:
      app: iris-state  # has to match .spec.template.metadata.labels
  serviceName: iris-state
  replicas: 1
  template:
    metadata:
      labels:
        app: iris-state  # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: iris-state
          image: redis:3.2-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)"]
          ports:
            - containerPort: 6379
              name: redis
