services/iris-user-state/k8s/src/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-router
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /iris
        backend:
          serviceName: iris-service
          servicePort: 80
